[gd_scene load_steps=53 format=3 uid="uid://bqv3m5wfkv1dx"]

[ext_resource type="Texture2D" uid="uid://bn60kllp6oywc" path="res://enemies/enemy1/enemy_sprite-sheet.png" id="1_4ddre"]
[ext_resource type="Script" path="res://enemies/enemytest/enemy_test.gd" id="1_glflw"]
[ext_resource type="PackedScene" uid="uid://bjdjocl150e78" path="res://common/components/hurt_box/hurt_box_component.tscn" id="2_3bj3q"]
[ext_resource type="PackedScene" uid="uid://dcbb8oj6nguc2" path="res://common/components/health_component/health_component.tscn" id="3_mk026"]
[ext_resource type="PackedScene" uid="uid://dugr7saoyoinh" path="res://enemies/common/components/enemy_movement/enemy_movement.tscn" id="3_uiomb"]
[ext_resource type="Script" path="res://common/state/state_machine.gd" id="5_g7yad"]
[ext_resource type="PackedScene" uid="uid://bqc6hmfuscep0" path="res://common/components/hit_box/hit_box.tscn" id="8_a8wmd"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_idle.gd" id="10_ly4hj"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_chase.gd" id="11_qq0xq"]
[ext_resource type="PackedScene" uid="uid://dsyyiv67qkdd8" path="res://common/components/chase_component/chase_component.tscn" id="12_hh5eu"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_attack.gd" id="12_u0nut"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_hit.gd" id="13_ik1ij"]
[ext_resource type="PackedScene" uid="uid://bf4ubatiredib" path="res://enemies/common/hit_particles.tscn" id="14_0ekae"]
[ext_resource type="PackedScene" uid="uid://bfuadt3q4kyl" path="res://enemies/common/components/attack_component/attack_component.tscn" id="14_av87s"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_death.gd" id="15_gwcnl"]
[ext_resource type="PackedScene" uid="uid://cdga3r26ndxlq" path="res://enemies/common/meat/meat.tscn" id="15_v3xo6"]
[ext_resource type="Script" path="res://enemies/common/states/enemy_wander.gd" id="17_a6d76"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1sues"]
atlas = ExtResource("1_4ddre")
region = Rect2(0, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_101kh"]
atlas = ExtResource("1_4ddre")
region = Rect2(160, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i563l"]
atlas = ExtResource("1_4ddre")
region = Rect2(320, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf8j2"]
atlas = ExtResource("1_4ddre")
region = Rect2(480, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dywtp"]
atlas = ExtResource("1_4ddre")
region = Rect2(640, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_twupy"]
atlas = ExtResource("1_4ddre")
region = Rect2(800, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqhpv"]
atlas = ExtResource("1_4ddre")
region = Rect2(960, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3158q"]
atlas = ExtResource("1_4ddre")
region = Rect2(1120, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge8ji"]
atlas = ExtResource("1_4ddre")
region = Rect2(1280, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_18j7n"]
atlas = ExtResource("1_4ddre")
region = Rect2(1440, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_oulwg"]
atlas = ExtResource("1_4ddre")
region = Rect2(1600, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhok3"]
atlas = ExtResource("1_4ddre")
region = Rect2(1760, 192, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hc7gh"]
atlas = ExtResource("1_4ddre")
region = Rect2(0, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjsd1"]
atlas = ExtResource("1_4ddre")
region = Rect2(160, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l331"]
atlas = ExtResource("1_4ddre")
region = Rect2(320, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj1ss"]
atlas = ExtResource("1_4ddre")
region = Rect2(480, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_30tb2"]
atlas = ExtResource("1_4ddre")
region = Rect2(640, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2wu6"]
atlas = ExtResource("1_4ddre")
region = Rect2(800, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms26g"]
atlas = ExtResource("1_4ddre")
region = Rect2(960, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_purc0"]
atlas = ExtResource("1_4ddre")
region = Rect2(1120, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qelnd"]
atlas = ExtResource("1_4ddre")
region = Rect2(1280, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_07rk4"]
atlas = ExtResource("1_4ddre")
region = Rect2(1440, 384, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6rdt"]
atlas = ExtResource("1_4ddre")
region = Rect2(0, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsm5i"]
atlas = ExtResource("1_4ddre")
region = Rect2(160, 288, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rr5u"]
atlas = ExtResource("1_4ddre")
region = Rect2(0, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x68l2"]
atlas = ExtResource("1_4ddre")
region = Rect2(160, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4pbj"]
atlas = ExtResource("1_4ddre")
region = Rect2(0, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kutgs"]
atlas = ExtResource("1_4ddre")
region = Rect2(160, 96, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk7rt"]
atlas = ExtResource("1_4ddre")
region = Rect2(320, 96, 160, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_q640u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sues")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_101kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i563l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf8j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dywtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twupy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqhpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3158q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge8ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18j7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oulwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhok3")
}],
"loop": false,
"name": &"attack",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hc7gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjsd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l331")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj1ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30tb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms26g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_purc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qelnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07rk4")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6rdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsm5i")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rr5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x68l2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4pbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kutgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk7rt")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk3ce"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eukfo"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jspbv"]
size = Vector2(210, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrcxg"]
size = Vector2(20, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p4aps"]
size = Vector2(26, 24)

[node name="EnemyTest" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_glflw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_q640u")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_wk3ce")

[node name="EnemyMovement" parent="." instance=ExtResource("3_uiomb")]
can_float = true
SPEED = 50

[node name="HealthComponent" parent="." instance=ExtResource("3_mk026")]
MAX_HEALTH = 3.0

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_box_component") instance=ExtResource("2_3bj3q")]
visible = false
collision_layer = 4
collision_mask = 2
health_box_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_eukfo")

[node name="ChaseComponent" parent="." instance=ExtResource("12_hh5eu")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseComponent"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_jspbv")
debug_color = Color(0, 0, 0, 0.105882)

[node name="AttackComponent" parent="." node_paths=PackedStringArray("hit_box", "animated_sprite") instance=ExtResource("14_av87s")]
position = Vector2(0, 9)
collision_layer = 4
attack_delay_time = 1.0
from_frame = 3
hit_box = NodePath("../HitBox/CollisionShape2D")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackComponent"]
position = Vector2(10, -2.5)
shape = SubResource("RectangleShape2D_nrcxg")
debug_color = Color(0.545098, 0.588235, 0.0627451, 0.0823529)

[node name="HitBox" parent="." node_paths=PackedStringArray("movement_component") instance=ExtResource("8_a8wmd")]
movement_component = NodePath("../EnemyMovement")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(13, 4)
shape = SubResource("RectangleShape2D_p4aps")
disabled = true
debug_color = Color(0.972549, 0.329412, 0.482353, 0.109804)

[node name="CheckTerrain" type="RayCast2D" parent="."]
position = Vector2(7, 9)
target_position = Vector2(0, 23)

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state", "movement")]
script = ExtResource("5_g7yad")
initial_state = NodePath("Wander")
movement = NodePath("../EnemyMovement")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("not_if_states")]
script = ExtResource("10_ly4hj")
not_if_states = [NodePath("../Attack"), NodePath("../Death")]

[node name="Chase" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("not_if_states")]
script = ExtResource("11_qq0xq")
not_if_states = [NodePath("../Attack"), NodePath("../Death")]

[node name="Attack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("not_if_states")]
script = ExtResource("12_u0nut")
not_if_states = [NodePath("../Hit"), NodePath("../Death")]

[node name="Hit" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("not_if_states")]
script = ExtResource("13_ik1ij")
particles = ExtResource("14_0ekae")
not_if_states = [NodePath("../Death")]

[node name="Death" type="Node2D" parent="StateMachine"]
script = ExtResource("15_gwcnl")
drop = ExtResource("15_v3xo6")

[node name="Wander" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("not_if_states")]
script = ExtResource("17_a6d76")
not_if_states = [NodePath("../Attack"), NodePath("../Death")]

[connection signal="animation_finished" from="AnimatedSprite2D" to="AttackComponent" method="_on_animated_sprite_2d_animation_finished"]
